--- a/arxiv/2024_03_arxiv.html
+++ b/arxiv/2024_03_arxiv.html
@@ -44,11 +44,98 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20240301</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.18837.pdf">https://arxiv.org/pdf/2402.18837.pdf</a></span> Exploring rare-earth Kitaev magnets by massive-scale computational analysis (Seong-Hoon Jang, Yukitoshi Motome)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.18588.pdf">https://arxiv.org/pdf/2402.18588.pdf</a></span> Emergence of Weyl Points due to Spin Orbit Coupling in LK-99</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.18629.pdf">https://arxiv.org/pdf/2402.18629.pdf</a></span> SU(3) altermagnetism: Lattice models, chiral magnons, and flavor-split bands *** (Matthias Vojta)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.19478.pdf">https://arxiv.org/pdf/2402.19478.pdf</a></span> Topological flat bands, valley polarization, and interband superconductivity in magic-angle twisted bilayer graphene with proximitized spin-orbit couplings (Sankar Das Sarma)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1608.01320.pdf">https://arxiv.org/pdf/1608.01320.pdf</a></span> Superconducting instability in non-Fermi liquids *** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.18837">https://arxiv.org/abs/2402.18837</a></span> Exploring rare-earth Kitaev magnets by massive-scale computational analysis (Seong-Hoon Jang, Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.18588">https://arxiv.org/abs/2402.18588</a></span> Emergence of Weyl Points due to Spin Orbit Coupling in LK-99</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.18629">https://arxiv.org/abs/2402.18629</a></span> SU(3) altermagnetism: Lattice models, chiral magnons, and flavor-split bands *** (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.19478">https://arxiv.org/abs/2402.19478</a></span> Topological flat bands, valley polarization, and interband superconductivity in magic-angle twisted bilayer graphene with proximitized spin-orbit couplings (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1608.01320">https://arxiv.org/abs/1608.01320</a></span> Superconducting instability in non-Fermi liquids *** (Ipsita Mandal)</p>
+<br>
+<p class="p1">20240304</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00316">https://arxiv.org/abs/2403.00316</a></span> Surface Chern-Simons theory for third-order topological insulators and superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00055">https://arxiv.org/abs/2403.00055</a></span> Crystalline axion electrodynamics in charge-ordered Dirac semimetals (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00052">https://arxiv.org/abs/2403.00052</a></span> Long-lived Topological Flatband Excitons in Semiconductor Moir ́e Heterostructures: a Bosonic Kane-Mele Model Platform (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00059">https://arxiv.org/abs/2403.00059</a></span> Non-Abelian fractionalization in topological minibands **** (Aidan P. Reddy, Nisarga Paul, Ahmed Abouelkomsan, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00156">https://arxiv.org/abs/2403.00156</a></span> Pair density wave order in multiband systems ***** (S. Raghu, Yi-Ming Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00615">https://arxiv.org/abs/2403.00615</a></span> Superconductivity Mediated by Nematic Fluctuations in Tetragonal FeSe1−xSx (Rafael M. Fernandes,6 and Eduardo H. da Silva Neto)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00062">https://arxiv.org/abs/2403.00062</a></span> Strong non-linear response of strange metals ***** (Serhii Kryhin, Subir Sachdev, Pavel A. Volkov)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2403.02700">https://arxiv.org/abs/2403.02700</a><span class="s2"> Aspects of superconformal symmetry</span></p>
+<p class="p3"><br></p>
+<p class="p1">20240305</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.01974">https://arxiv.org/abs/2403.01974</a></span> Renormalization group for Anderson localization on high-dimensional lattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02279">https://arxiv.org/abs/2403.02279</a></span> Graphene conductivity: Kubo model versus QFT-based model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02295">https://arxiv.org/abs/2403.02295</a></span> Magnetic Weyl-Kondo semimetals induced by quantum fluctuations *** (Yuan Fang, Lei Chen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00856">https://arxiv.org/abs/2403.00856</a></span> Higher vortexability: zero field realization of higher Landau levels ***** (Manato Fujimoto, Daniel E. Parker, Junkai Dong, Eslam Khalaf, Ashvin Vishwanath, Patrick Ledwith)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.01583">https://arxiv.org/abs/2403.01583</a></span> Universal spectral moment theorem and its applications in non-Hermitian systems (Kai Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02335">https://arxiv.org/abs/2403.02335</a></span> Proof of the nonintegrability of PXP model and general spin-1/2 systems (HaRu K. Park, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00910">https://arxiv.org/abs/2403.00910</a></span> Computational supremacy in quantum simulation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03123">https://arxiv.org/abs/2403.03123</a></span> Particle-hole asymmetric phases in doped twisted bilayer graphene (Run Hou, Shouvik Sur, Lucas K. Wagner, Andriy H. Nevidomskyy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00933">https://arxiv.org/abs/2403.00933</a></span> Probing p-wave superconductivity in UTe2 via point-contact junctions (Hyeok Yoon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00852">https://arxiv.org/abs/2403.00852</a></span> Reclaiming the Lost Conformality in a non-Hermitian Quantum 5-state Potts Model ***** (Han Ma, Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00905">https://arxiv.org/abs/2403.00905</a></span> Hasse Diagrams for Gapless SPT and SSB Phases with Non-Invertible Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02322">https://arxiv.org/abs/2403.02322</a></span> Stable non-Fermi liquid fixed point at the onset of incommensurate 2kF charge density wave order ***** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03119">https://arxiv.org/abs/2403.03119</a></span> Higher form symmetries and orbifolds of two-dimensional Yang–Mills theory (Richard J. Szabo)</p>
+<p class="p3"><br></p>
+<p class="p1">20240306</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03199">https://arxiv.org/abs/2403.03199</a></span> Operator Learning Renormalization Group *** (Roger G. Melko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02400">https://arxiv.org/abs/2403.02400</a></span> Tunable quantum criticality and pseudocriticality across the fixed-point annihilation in the anisotropic spin-boson model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02535">https://arxiv.org/abs/2403.02535</a></span> Quantum critical fluctuations generate intensely magnetic field–resilient superconductivity in UTe2</p>
+<p class="p3"><br></p>
+<p class="p1">20240307</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03272">https://arxiv.org/abs/2403.03272</a></span> Correlated decoding of logical algorithms with transversal gates (Dolev Bluvstein, Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03957">https://arxiv.org/abs/2403.03957</a></span> Decoupling the electronic gap from the spin Chern number in disordered higher-order topological insulators (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03765">https://arxiv.org/abs/2403.03765</a></span> Nonlinear Landau fan diagram and aperiodic magnetic oscillations in three-dimensional systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03911">https://arxiv.org/abs/2403.03911</a></span> Electron correlations in the kagome flat band metal CsCr3Sb5 (Shouvik Sur, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03495">https://arxiv.org/abs/2403.03495</a></span> Aharonov-Bohm effect mediated by massive photons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03340">https://arxiv.org/abs/2403.03340</a></span> Relating the Hall conductivity to the many-body Chern number using Fermi’s Golden rule and Kramers-Kronig relations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03255">https://arxiv.org/abs/2403.03255</a></span> QCD critical point and hydrodynamic fluctuations in relativistic fluids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03953">https://arxiv.org/abs/2403.03953</a></span> Backfiring Bosonisation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03258">https://arxiv.org/abs/2403.03258</a></span> Interaction-driven Roton Condensation in C = 2/3 Fractional Quantum Anomalous Hall State (Kai Sun, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03694">https://arxiv.org/abs/2403.03694</a></span> SU(N) Kondo-Heisenberg chain: Phase diagram, Ising criticality, and the coexistence of heavy quasiparticles and valence bond solid order (Fakher F. Assaad)</p>
+<p class="p3"><br></p>
+<p class="p1">20240308</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04025">https://arxiv.org/abs/2403.04025</a></span> Worldsheet patching, 1-form symmetries, and “Landau-star” phase transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04767">https://arxiv.org/abs/2403.04767</a></span> Robust teleportation of a surface code and cascade of topological quantum phase transitions (Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04465">https://arxiv.org/abs/2403.04465</a></span> Classifying bulk-edge anomalies in the Dirac Hamiltonian</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.03964">https://arxiv.org/abs/2403.03964</a></span> Theory of Half-Integer Fractional Quantum Spin Hall Insulator Edges (Ady Stern, Trithep Devakul)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04208">https://arxiv.org/abs/2403.04208</a></span> Controllable Skyrmion Islands in a Moire ́ Magnet (Jemin Park, HaRu K. Park, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04196">https://arxiv.org/abs/2403.04196</a></span> Parent Berry curvature and the ideal anomalous Hall crystal (Trithep Devakul)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04673">https://arxiv.org/abs/2403.04673</a></span> Notes on complex q = 2 SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.08946">https://arxiv.org/abs/1812.08946</a></span> Lectures on 4d N = 1 dynamics and related topics (Yuji Tachikawa)</p>
+<p class="p3"><br></p>
+<p class="p1">20240311</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.05522">https://arxiv.org/abs/2403.05522</a></span> Anomalous Hall Crystals in Rhombohedral Multilayer Graphene II: General Mechanism and a Minimal Model ***** (Tomohiro Soejima (副島智大), Junkai Dong, Taige Wang, Tianle Wang, Michael P. Zaletel, Ashvin Vishwanath, Daniel E. Parker)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04829">https://arxiv.org/abs/2403.04829</a></span> Playing nonlocal games across a topological phase transition on a quantum computer (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04835">https://arxiv.org/abs/2403.04835</a></span> Non-Invertible Symmetries, Anomalies and Scattering Amplitudes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.05291">https://arxiv.org/abs/2403.05291</a></span> A discrete formulation for three-dimensional winding number (Ken Shiozaki)</p>
+<p class="p3"><br></p>
+<p class="p3"><br></p>
+<p class="p1">20240312</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.06472">https://arxiv.org/abs/2403.06472</a></span> What is a proper definition of spin current? –Lessons from the Kane-Mele Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.05917">https://arxiv.org/abs/2403.05917</a></span> Thermal conductivity of nonunitary triplet superconductors: application to UTe2 *** (P. J. Hirschfeld)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.05980">https://arxiv.org/abs/2403.05980</a></span> A Path Integral for Chord Diagrams and Chaotic-Integrable Transitions in Double Scaled SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.06553">https://arxiv.org/abs/2403.06553</a></span> Unconventional topological mixed-state transition and critical phase induced by self-dual coherent errors ***** (Yu-Hsueh Chen, Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.06652">https://arxiv.org/abs/2403.06652</a></span> Symmetry Resolved Measures in Quantum Field Theory: a Short Review ***</p>
+<p class="p3"><br></p>
+<p class="p1">20240313</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07054">https://arxiv.org/abs/2403.07054</a></span> Minimal Fractional Topological Insulator in half-filled conjugate moir ́e Chern bands ***** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07873">https://arxiv.org/abs/2403.07873</a></span> Stability of Anomalous Hall Crystals in multilayer rhombohedral graphene ***** (Zhihuan Dong, Adarsh S. Patri, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07115">https://arxiv.org/abs/2403.07115</a></span> Operator size growth in Lindbladian SYK ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07739">https://arxiv.org/abs/2403.07739</a></span> Topological Data Analysis of Monopoles in U(1) Lattice Gauge Theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07402">https://arxiv.org/abs/2403.07402</a></span> Renormalization of Complex Networks with Partition Functions (Sungwon Jung, Sang Hoon Lee, Jaeyoon Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07052">https://arxiv.org/abs/2403.07052</a></span> Instantaneous Response and Quantum Geometry of Insulators **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07430">https://arxiv.org/abs/2403.07430</a></span> Spatially oscillating correlation functions in (2 + 1)-dimensional four-fermion models: The mixing of scalar and vector modes at finite density ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07575">https://arxiv.org/abs/2403.07575</a></span> Emergent (2+1)D topological orders from iterative (1+1)D gauging ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07813">https://arxiv.org/abs/2403.07813</a></span> Higher condensation theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05689">https://arxiv.org/abs/2301.05689</a></span> Diagnostics of mixed-state topological order and breakdown of quantum memory **** (Ruihua Fan, Yimu Bao, Ehud Altman, Ashvin Vishwanath)</p>
+<p class="p3"><br></p>
+<p class="p1">20240314</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.08158">https://arxiv.org/abs/2403.08158</a></span> Dipolar BF theory and dipolar braiding statistics **** (Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.07999">https://arxiv.org/abs/2403.07999</a></span> Nodal d-wave pairing from spin fluctuations in a thermally disordered anti-ferromagnet</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01600">https://arxiv.org/abs/2310.01600</a></span> Revisiting the Thomas-Fermi Potential for Three-Dimensional Condensed Matter Systems</p>
+<p class="p3"><br></p>
+<p class="p1">20240315</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09627">https://arxiv.org/abs/2403.09627</a></span> On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model ****** (SangEun Han, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.08858">https://arxiv.org/abs/2403.08858</a></span> Quantum Many-Body Scarring in 2 + 1D Gauge Theories with Dynamical Matter</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
